bookstore-k8s/gateway-ingress/gateway-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          #serviceName: books-list-service
          #servicePort: 9099
          serviceName: bookstore-microgateway-service
          servicePort: 9090
